[#55] 호텔 검색 리팩토링 (#60)
* Modify: Hotel 도메인 @Getter 추가

* Refactor: HotelService CQRS 스타일 구조 적용

* Refactor: 호텔 요금 다건 조회 수정

* Test: 객실 검색 코드 수정에 따른 테스트 수정

* Test: 호텔 검색 성공 테스트 @Nested 적용

* Chore: Infrastructure config 패키지 변경

* Refactor: StringUtils를 활용한 문자열 검증 최적화

* Chore: 명시적인 의존성 버전 설정